--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,27 +1,15 @@
+require:
+  - rubocop-performance
+  - rubocop-rspec
+
 AllCops:
-  DisabledByDefault: true
   NewCops: enable
-
-Security:
-  Enabled: true
-
-Bundler/DuplicatedGem:
-  Enabled: true
-Bundler/InsecureProtocolSource:
-  Enabled: true
-Layout/IndentationStyle:
-  Enabled: true
-Layout/SpaceInsideRangeLiteral:
-  Enabled: true
-Lint:
-  Enabled: true
-Lint/RaiseException:
-  Enabled: true
-Naming/AsciiIdentifiers:
-  Enabled: true
-Naming/ClassAndModuleCamelCase:
-  Enabled: true
-Naming/ConstantName:
-  Enabled: true
-Naming/FileName:
-  Enabled: true
+  TargetRubyVersion: 2.6
+Metrics/BlockLength:
+  Enabled: false
+Naming/AccessorMethodName:
+  Enabled: false
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
