--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,11 @@ require:
 AllCops:
   NewCops: enable
   TargetRubyVersion: 2.6
+Metrics/AbcSize:
+  Enabled: false
 Metrics/BlockLength:
+  Enabled: false
+Metrics/MethodLength:
   Enabled: false
 Naming/AccessorMethodName:
   Enabled: false
